# gegelati-pendulum-embedded

./: .cproject  .gitignore  .mxproject  .project  PendulumEmbedded Debug.launch  PendulumEmbedded Release.launch  PendulumEmbedded.ioc  README.md  STM32F446RETX_FLASH.ld  clearResults.sh  install_packages.sh  launch_picocom.sh  logToJson.rb  plotMeasures.py  startAllEnergyBench.rb  startAllEnergyBenches.rb
Core/Inc/: CurrentMonitor.h  PendulumEnvironment.h  externHeader.h  gpio.h  pendulum.h  serialCommunication.h  stm32f4xx_hal_conf.h  tim.h
Core/Inc/Benchmark/: Bench.h  CurrentBench.h  CurrentMonitor.h  INA219Bench.h  INA219Monitor.h  Monitor.h  PendulumCurrentMonitor.h  PendulumINA219Monitor.h  TimeUnit.h  TimingBench.h  benchFunctions.h
Core/Inc/Pendulum/: PendulumEnvironment.h  pendulum_program.h
Core/Src/: CurrentMonitor.cpp  gpio.c  main.cpp  pendulum_program.c  serialCommunication.c  stm32f4xx_hal_msp.c  stm32f4xx_it.c  tim.c  usart.c
Core/Src/Benchmark/: CurrentBench.cpp  CurrentMonitor.cpp  INA219Bench.cpp  INA219Monitor.cpp  Monitor.cpp  PendulumCurrentMonitor.cpp  PendulumINA219Monitor.cpp  TimingBench.cpp  benchFunctions.cpp
PendulumEmbeddedSTMProject/: .cproject  .project  PendulumEmbeddedSTMProject.ioc  README.md  ReleaseEnergyBench.launch
ResultsAnalysis/: plotMeasures.py
TPG/: README.md
Trainer-Generator/: CMakeLists.txt  README.md  params.json
Trainer-Generator/src/: mainExecutionStats.cpp  mainGenerator.cpp  mainTrainer.cpp  pendulum.cpp  pendulum.h
Trainer-Generator/to_train/: README.md
Trainer-Generator/to_train/Test_200/: params.json
Trainer-Generator/to_train/Test_300/: params.json
Trainer-Generator/to_train/Test_350/: params.json
scripts/: README.md  computeEnergyStats.jl  compute_energy_summary.jl  createPlots.jl  create_plots.jl  generateEnergyPlots.jl  generate_TPG.sh  generate_energy_plots.jl  generate_execution_summary.jl  install_julia_packages.jl  logToJson.rb  plotMeasures.jl  plotMeasures.py  startTrainings.sh  start_trainings.sh
(+32 files in other folders)
